# Data-collection-OcamCalib-ROS-node

./: README.md
collect_omni_data/: CMakeLists.txt  package.xml  readme.txt
collect_omni_data/scripts/: collect.py  cv.py  publisher.py
