<?xml version="1.0"?>
<package format="2">
  <name>collect_omni_data</name>
  <version>0.0.0</version>
  <description>The collect_omni_data package</description>

  <maintainer email="balasubramanyam.evani@gmail.com">Balasubramanam Evani</maintainer>
  <author email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

 
</package>
